fix for text overflow in grid boxes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -246,6 +246,7 @@ div.comment_votes {
 .masonry .item {
   width:  100%;
   float: left;
+  word-wrap: break-word;
 }
 
 #post-title {
